--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -10,6 +10,8 @@
   justify-content: space-between;
   padding: 0.25rem;
 
+
+
   &__left {
     display: flex;
     align-items: center;
@@ -33,25 +35,62 @@
     margin: 0 0 0 1rem;
     color: $c-black;
 
-    > a {
-      position: relative;
-      color: $c-blue;
+    p {
+      margin-bottom: 0.5rem;
 
-      &::before {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: -0.5rem;
-        width: 100%;
-        height: 1px;
-        background-color: $c-blue;
-        opacity: 0;
-        transition: opacity $transition-speed;
-        content: '';
+      > a {
+        position: relative;
+        color: $c-blue;
+
+        &::before {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: 0;
+          width: 100%;
+          height: 1px;
+          background-color: $c-blue;
+          opacity: 0;
+          transition: opacity $transition-speed;
+          content: '';
+        }
+
+        &:hover::before {
+          opacity: 1;
+        }
+      }
+    }
+
+    &__bottom {
+      display: flex;
+      align-items: center;
+
+      > a > svg {
+        width: 2.25rem;
       }
 
-      &:hover::before {
-        opacity: 1;
+      > * + * {
+        position: relative;
+        display: inline-block;
+        margin-left: 0.5rem;
+        padding-bottom: 0.5rem;
+
+        &::before {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: 0.5rem;
+          width: 100%;
+          height: 1px;
+          background-color: $c-blue;
+          opacity: 0;
+          transition: opacity $transition-speed;
+          content: '';
+        }
+
+        &:hover::before {
+          opacity: 1;
+        }
       }
     }
   }
@@ -80,8 +119,14 @@
     }
 
     &__right {
+      display: flex;
+      flex-direction: column-reverse;
       text-align: center;
       margin-left: 0;
+
+      &__bottom {
+        flex-direction: column;
+      }
     }
   }
 
