add playground button to front page

--- a/app/styles/components/buttons.scss
+++ b/app/styles/components/buttons.scss
@@ -13,6 +13,7 @@
   &--stroke {
     border: 1px solid $c-blue;
     color: $c-blue;
+    background: $c-white;
     transition: color $transition-speed, background-color $transition-speed;
 
     &:hover {
