--- a/app/styles/_markdown.scss
+++ b/app/styles/_markdown.scss
@@ -1,18 +1,20 @@
 #markdown {
-  h3 {
+
+  h1 {
     @include f-heading;
   }
 
-  h4 {
+  h2 {
     @include f-subheading;
     margin-top: 3rem;
-    margin-bottom: 0;
   }
 
+  h3,
+  h4,
   h5,
   h6 {
     @include f-small-heading;
-    margin-top: 1.75rem;
+    margin-top: 1.5rem;
     margin-bottom: 0;
   }
 
@@ -25,6 +27,10 @@
 
     li {
       padding: 0.5rem 0;
+
+      p {
+        margin: 0;
+      }
     }
   }
 
