--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,7 @@
 // Colors
 $c-black: #101010;
 $c-white: #fff;
-$c-blue: #2f80ed;
+$c-blue: #2728e2;
 $c-darkgrey: #707070;
 $c-lightgrey: #e6e6e6;
 $c-editor-bg: #f7f9fa;
