--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -1,5 +1,5 @@
 .section--nav {
-  padding: 0 1rem 0 0;
+  padding: 1rem;
 }
 
 
@@ -10,7 +10,7 @@
 
   &__left {
     margin: 0;
-    width: 6.25rem;
+    max-height: 100%;
 
     > a {
       display: block;
