add standards page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,5 @@
 // Colors
-$c-black: #101010;
+$c-black: #1A1A1A;
 $c-white: #fff;
 $c-blue: #2728e2;
 $c-darkgrey: #707070;
@@ -49,7 +49,7 @@ $transition-speed: 200ms;
 
 @import 'pages/technology';
 @import 'pages/team';
-@import 'pages/statechannels';
+@import 'pages/standards';
 
 @import 'markdown';
 
