--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,7 @@
 // Colors
 $c-black: #323131;
 $c-white: #fff;
-$c-blue: #223886;
+$c-blue: #3531ff;
 $c-darkgrey: #707070;
 $c-lightgrey: #e6e6e6;
 $c-editor-bg: #f7f9fa;
