--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -3,14 +3,11 @@
   padding: 1rem;
 }
 
-
 .footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0.25rem;
-
-
 
   &__left {
     display: flex;
@@ -23,7 +20,7 @@
 
     &__text {
       @include f-rem;
-      margin: 0 0 0 1.75rem;
+      margin: 0 0 0 1rem;
       color: $c-darkgrey;
       font-weight: 300;
     }
@@ -38,7 +35,7 @@
     color: $c-black;
 
     p {
-      margin-bottom: 0.5rem;
+      margin: 0;
 
       > a {
         position: relative;
@@ -73,6 +70,17 @@
         width: 2.25rem;
       }
     }
+  }
+}
+
+.hosted-by {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+
+  span {
+    display: inline-block;
+    margin-right: 0.5rem;
   }
 }
 
@@ -112,5 +120,9 @@
 
   .footer-abstract--left {
     display: none;
+  }
+
+  .hosted-by {
+    justify-content: center;
   }
 }
