--- a/app/styles/components/callout.scss
+++ b/app/styles/components/callout.scss
@@ -24,7 +24,7 @@
   width: 100%;
   transform: translateY(-50%);
   z-index: 1;
-  color: $c-blue;
+  // color: $c-blue;
 
   &__content {
     max-width: 50rem;
