--- a/app/styles/components/callout.scss
+++ b/app/styles/components/callout.scss
@@ -34,6 +34,11 @@
       margin: 0 0 1.82rem;
     }
 
+    &__subheading {
+      @include f-subheading;
+      margin: 0 0 1.82rem;
+    }
+
     &__buttons {
       display: flex;
 
