--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -59,10 +59,10 @@
   }
 
   &__dropdown {
-
+    float: right;
 
     &__item {
-      margin-left: 0;
+
       line-height: 30px;
       padding: 15px;
       font-size: 1.125rem;
