--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -62,6 +62,7 @@
 
     &__list {
       margin-top:8px;
+      margin-bottom:8px;
       position:relative;
       text-align:right;
       list-style:none;
