--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -66,8 +66,20 @@
       position:relative;
       text-align:right;
       list-style:none;
+      display:none;
 
     }
+
+    &__list li{
+      position: relative;
+      width: 100%;
+      text-align: center;
+    }
+    &__list li:hover &__item > li{
+      display: block;
+      top: 0;
+    }
+
 
     &__item {
       position:inherit;
