updated nav bar

--- a/app/styles/components/navbar.scss
+++ b/app/styles/components/navbar.scss
@@ -68,6 +68,7 @@
       list-style:none;
       display:flex;
       flex-direction: column;
+      padding-left:4.121rem;
     }
 
     &__list li {
