--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -51,7 +51,7 @@
           background-color: $c-blue;
           opacity: 0;
           transition: opacity $transition-speed;
-          content: '';
+          content: "";
         }
 
         &:hover::before {
@@ -72,7 +72,6 @@
     }
   }
 }
-
 
 @media screen and (max-width: $screen-md) {
   .section--footer {
@@ -110,5 +109,4 @@
   .footer-abstract--left {
     display: none;
   }
-
 }
