--- a/app/styles/components/list.scss
+++ b/app/styles/components/list.scss
@@ -15,7 +15,7 @@
       width: 2.75rem;
       height: 1px;
       background: currentcolor;
-      content: '';
+      content: "";
     }
 
     &__title {
@@ -31,7 +31,6 @@
     }
   }
 }
-
 
 @media screen and (max-width: 767px) {
   .list {
@@ -49,7 +48,7 @@
       width: 100%;
       height: 1px;
       background: $c-lightgrey;
-      content: '';
+      content: "";
     }
   }
 }
