--- a/app/styles/components/mobile-menu.scss
+++ b/app/styles/components/mobile-menu.scss
@@ -21,10 +21,10 @@
     right: 1.5rem;
     color: $c-lightgrey;
     font-size: $f-sm;
-    font-family: 'Chivo', sans-serif;
+    font-family: "Chivo", sans-serif;
     font-weight: 300;
     cursor: pointer;
-    content: 'close';
+    content: "close";
 
     &:hover {
       color: $c-blue;
@@ -49,7 +49,7 @@
         width: 65%;
         height: 1px;
         background-color: $c-lightgrey;
-        content: '';
+        content: "";
       }
     }
 
