extend contact dropdown to mobile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 $c-black: #323131;
 $c-white: #fff;
 $c-blue: #3531ff;
+$c-blue-link: #3361f8;
 $c-darkgrey: #707070;
 $c-lightgrey: #e6e6e6;
 $c-editor-bg: #f7f9fa;
