--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -25,8 +25,9 @@ p {
 }
 
 ul {
-  padding-left: 0;
-  list-style: none;
+  padding-left: 10;
+  list-style: circle;
+  line-height: 30px;
 }
 
 img {
