revert global style changes
introduce "bullets" class and use in careers page

--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -25,9 +25,8 @@ p {
 }
 
 ul {
-  padding-left: 10;
-  list-style: circle;
-  line-height: 30px;
+  padding-left: 0;
+  list-style: none;
 }
 
 img {
